force-app/main/default/objects/Case/fields/Sympton__c.field-meta.xml
<CustomField>
    <fullName>Sympton__c</fullName>
    <label>Symptom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhesion</fullName>
            </value>
            <value>
                <fullName>Bill - Bill is missing</fullName>
            </value>
            <value>
                <fullName>Bill - Missing install</fullName>
            </value>
            <value>
                <fullName>Bill - Missing part</fullName>
            </value>
            <value>
                <fullName>Bill - Missing schematic</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong bill</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong install</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong part</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong schematic</fullName>
            </value>
            <value>
                <fullName>Booting</fullName>
            </value>
            <value>
                <fullName>Display - Bad video</fullName>
            </value>
            <value>
                <fullName>Display - No video</fullName>
            </value>
            <value>
                <fullName>Harness - Too short or too long</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>On_off</fullName>
            </value>
            <value>
                <fullName>Overheat</fullName>
            </value>
            <value>
                <fullName>Part - Bad</fullName>
            </value>
            <value>
                <fullName>Part - Damaged</fullName>
            </value>
            <value>
                <fullName>Part - Interference</fullName>
            </value>
            <value>
                <fullName>Part - Loose fit</fullName>
            </value>
            <value>
                <fullName>Part - Marking</fullName>
            </value>
            <value>
                <fullName>Part -Mechanical fit</fullName>
            </value>
            <value>
                <fullName>Part - Not programmed</fullName>
            </value>
            <value>
                <fullName>Part - Out of specification limits</fullName>
            </value>
            <value>
                <fullName>PA system not working properly</fullName>
            </value>
            <value>
                <fullName>Schematic - Missing information</fullName>
            </value>
            <value>
                <fullName>Schematic - Wrong information</fullName>
            </value>
            <value>
                <fullName>Support - Advice/ training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>