force-app/main/default/objects/Case/fields/Syteline_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Syteline_PO_Number__c</fullName>
    <label>Syteline PO Number</label>
    <length>20</length>
    <referenceTo>Syteline_PO__x</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>ExternalLookup</type>
</CustomField>