force-app/main/default/objects/Case/fields/Syteline_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Syteline_Vendor_Name__c</fullName>
    <label>Syteline Vendor Name</label>
    <length>255</length>
    <referenceTo>Syteline_vendaddr__x</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>ExternalLookup</type>
</CustomField>