force-app/main/default/objects/Case/fields/Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Testing_Required__c</fullName>
    <label>Testing Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>