force-app/main/default/objects/Case/fields/Tread__c.field-meta.xml
<CustomField>
    <fullName>Tread__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tread</label>
    <type>Checkbox</type>
</CustomField>