force-app/main/default/objects/Case/fields/TREAD_Reportable__c.field-meta.xml
<CustomField>
    <fullName>TREAD_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TREAD Reportable</label>
    <type>Checkbox</type>
</CustomField>