force-app/main/default/objects/Case/fields/Trip_Report__c.field-meta.xml
<CustomField>
    <fullName>Trip_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trip Report</label>
    <referenceTo>Trip_Report__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>