force-app/main/default/objects/Case/fields/Update_Hours__c.field-meta.xml
<CustomField>
    <fullName>Update_Hours__c</fullName>
    <label>Update Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>