force-app/main/default/objects/Case/fields/Update_Notes__c.field-meta.xml
<CustomField>
    <fullName>Update_Notes__c</fullName>
    <inlineHelpText>Log running notes and conversations in Chatter; this field is for summary purposes only</inlineHelpText>
    <label>Update Summary</label>
    <type>TextArea</type>
</CustomField>