force-app/main/default/objects/Case/fields/Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>Update_Reason__c</fullName>
    <label>Update Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error: Pubs</fullName>
            </value>
            <value>
                <fullName>Error: Omission</fullName>
            </value>
            <value>
                <fullName>Error: Eng</fullName>
            </value>
            <value>
                <fullName>Error: Bom</fullName>
            </value>
            <value>
                <fullName>Error: Vendor</fullName>
            </value>
            <value>
                <fullName>Change: Eng</fullName>
            </value>
            <value>
                <fullName>Change: Bom</fullName>
            </value>
            <value>
                <fullName>Change: Vendor</fullName>
            </value>
            <value>
                <fullName>Change: PDI/Retrofit</fullName>
            </value>
            <value>
                <fullName>Special Request</fullName>
            </value>
            <value>
                <fullName>Already Updated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>