force-app/main/default/objects/Case/fields/Vendor_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Recovery__c</fullName>
    <description>Contract with Vendor outlining recovery process for campaign expenses.</description>
    <label>Vendor Recovery</label>
    <type>TextArea</type>
</CustomField>