force-app/main/default/objects/Case/fields/Warranty_Claims_History__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claims_History__c</fullName>
    <label>Warranty Claims History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>