force-app/main/default/objects/Case/recordTypes/Collections.recordType-meta.xml
<RecordType>
    <fullName>Collections</fullName>
    <active>true</active>
    <businessProcess>Collections</businessProcess>
    <label>Collections</label>
</RecordType>