force-app/main/default/objects/Case/recordTypes/Discrepency.recordType-meta.xml
<RecordType>
    <fullName>Discrepency</fullName>
    <active>true</active>
    <businessProcess>Production Support</businessProcess>
    <label>Discrepency</label>
</RecordType>