force-app/main/default/objects/Case/recordTypes/Field_Support.recordType-meta.xml
<RecordType>
    <fullName>Field_Support</fullName>
    <active>true</active>
    <businessProcess>Field Support</businessProcess>
    <description>1 Issue, Multiple Buses</description>
    <label>Field Support</label>
</RecordType>