force-app/main/default/objects/Case/recordTypes/Production_Support.recordType-meta.xml
<RecordType>
    <fullName>Production_Support</fullName>
    <active>true</active>
    <businessProcess>Production Support</businessProcess>
    <label>Production Support</label>
</RecordType>