force-app/main/default/objects/Case/recordTypes/Publications.recordType-meta.xml
<RecordType>
    <fullName>Publications</fullName>
    <active>true</active>
    <businessProcess>Publications</businessProcess>
    <label>Publications</label>
</RecordType>