force-app/main/default/objects/Case/recordTypes/RCAR.recordType-meta.xml
<RecordType>
    <fullName>RCAR</fullName>
    <active>true</active>
    <businessProcess>RCAR</businessProcess>
    <description>Receiving Corrective Action Requests</description>
    <label>RCAR</label>
</RecordType>