force-app/main/default/objects/Case/recordTypes/Sales_Support.recordType-meta.xml
<RecordType>
    <fullName>Sales_Support</fullName>
    <active>true</active>
    <businessProcess>Field Support</businessProcess>
    <label>Sales Support</label>
</RecordType>