force-app/main/default/objects/Case/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <businessProcess>Training</businessProcess>
    <description>All Training support and Requests</description>
    <label>Training</label>
</RecordType>