force-app/main/default/objects/Case/validationRules/Problem_Code_Required_with_Field_Support.validationRule-meta.xml
<ValidationRule>
    <fullName>Problem_Code_Required_with_Field_Support</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( RecordType.Name  =  &quot;Field Support&quot;,
ISPICKVAL ( Status , &quot;Closed&quot;), 
ISBLANK (TEXT(Problem_Code__c )))</errorConditionFormula>
    <errorDisplayField>Problem_Code__c</errorDisplayField>
    <errorMessage>Please fill in the Problem Code to close this Field Support Case</errorMessage>
</ValidationRule>