force-app/main/default/objects/Case/validationRules/Problem_Code_with_Technical_Support_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Problem_Code_with_Technical_Support_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( RecordType.Name  =  &quot;Technical Support&quot;,
ISPICKVAL ( Status , &quot;Closed&quot;), 
ISBLANK (TEXT(Problem_Code__c )))</errorConditionFormula>
    <errorDisplayField>Problem_Code__c</errorDisplayField>
    <errorMessage>Please Fill in the Problem Code for this Technical Support Case</errorMessage>
</ValidationRule>