force-app/main/default/objects/Case/listViews/All_Open_Field_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Field_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Internal_Name__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Related_Supplier__c</columns>
    <columns>Include_on_Issues_Log__c</columns>
    <columns>Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Field_Support</value>
    </filters>
    <label>All Open Field Cases</label>
</ListView>