force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Internal_Name__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Related_Supplier__c</columns>
    <columns>Safety_Related__c</columns>
    <columns>Emissions_Related__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Field_Support,Case.Technical_Support</value>
    </filters>
    <label>All Open Cases</label>
</ListView>