force-app/main/default/objects/Case/listViews/Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Internal_Name__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Related_Supplier__c</columns>
    <columns>Include_on_Issues_Log__c</columns>
    <columns>Safety_Related__c</columns>
    <columns>Emissions_Related__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Cases</label>
</ListView>