force-app/main/default/objects/Case/listViews/Customer_Care.listView-meta.xml
<ListView>
    <fullName>Customer_Care</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Internal_Name__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Complaint__c</columns>
    <columns>Bus_Number__c</columns>
    <columns>Part_Number__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Customer_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Customer_Support,Case.Technical_Support</value>
    </filters>
    <label>Customer Care</label>
    <sharedTo>
        <role>Customer_Care</role>
        <role>Field_Service_Mgr</role>
    </sharedTo>
</ListView>