force-app/main/default/objects/Case/listViews/Monday_Meeting.listView-meta.xml
<ListView>
    <fullName>Monday_Meeting</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Internal_Name__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Related_Supplier__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Proposed_Resolution__c</columns>
    <columns>Testing_Required__c</columns>
    <columns>Cost_Impact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Include_on_Issues_Log__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Monday Meeting</label>
</ListView>