force-app/main/default/objects/Case/listViews/Technical_Support.listView-meta.xml
<ListView>
    <fullName>Technical_Support</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Internal_Name__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Complaint__c</columns>
    <columns>Bus_Number__c</columns>
    <columns>Part_Number__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Customer_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Customer_Support,Case.Technical_Support</value>
    </filters>
    <label>Technical Support</label>
</ListView>